objects/ASI_NPP_PRISMA_code__c.object
<CustomObject>
    <description>PRISMA code for NPP Apps</description>
    <fields>
        <fullName>ASI_NPP_BALO_Category__c</fullName>
        <label>BALO Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Brand_for_Finance_Report_RP12_ST__c</fullName>
        <label>Brand for Finance Reporting (RP12 ST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Brand_for_Reporting_RP12_NST__c</fullName>
        <label>Brand for Finance Reporting  (RP12 NST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Product_for_Vol_Reporting_RP11__c</fullName>
        <label>PRISMA Product for Vol Reporting (RP11)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_RP10__c</fullName>
        <label>RP10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_RP11__c</fullName>
        <label>RP11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_RP12_NST__c</fullName>
        <label>RP12 NST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_RP12_ST__c</fullName>
        <label>RP12 ST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_RP9__c</fullName>
        <label>RP9</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PRISMA code</label>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>ASI_NPP_BALO_Category__c</columns>
        <columns>ASI_NPP_Brand_for_Reporting_RP12_NST__c</columns>
        <columns>ASI_NPP_Brand_for_Finance_Report_RP12_ST__c</columns>
        <columns>ASI_NPP_Description__c</columns>
        <columns>ASI_NPP_Product_for_Vol_Reporting_RP11__c</columns>
        <columns>ASI_NPP_RP10__c</columns>
        <columns>ASI_NPP_RP11__c</columns>
        <columns>ASI_NPP_RP12_NST__c</columns>
        <columns>ASI_NPP_RP12_ST__c</columns>
        <columns>ASI_NPP_RP9__c</columns>
        <columns>ASI_NPP_Inactive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_NPP_PRISMA_code__c.ASI_NPP_SG_Prisma_Iem</value>
        </filters>
        <filters>
            <field>ASI_NPP_Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All - Active</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PRISMA Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRISMA code</pluralLabel>
    <recordTypes>
        <fullName>ASI_NPP_SG_Prisma_Iem</fullName>
        <active>true</active>
        <label>SG Prisma Code</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>